Bug 159535 - Writer comments have a shadow that is hardcoded onto a white background even in dark mode
Summary: Writer comments have a shadow that is hardcoded onto a white background even ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Writer-Comments Dark-Mode
  Show dependency treegraph
 
Reported: 2024-02-02 22:39 UTC by Jeff Fortin Tam
Modified: 2024-02-22 10:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Annotated screenshot at 2x scale (57.83 KB, image/png)
2024-02-02 22:40 UTC, Jeff Fortin Tam
Details
2024-02-22 verified (234.57 KB, image/gif)
2024-02-22 10:26 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff Fortin Tam 2024-02-02 22:39:17 UTC
Description:
The shadow under Writer's comments does not adapt to dark mode on Linux, whether toggled live or before starting the app.

Please see the attached screenshot.

Steps to Reproduce:
1. Switch your OS to dark theme mode
2. Insert a comment in Writer, type something in it
3. Press "Esc" to exit the comment
4. Optional: hover with the mouse over/outside the comment

Actual Results:
The shadow is brighter than the backdrop behind the comments.
It seems its gradient was hardcoded to a previously lighter backdrop color stop.
It is more obvious in dark mode because the margin's backdrop color is darker;
if looking closely however, this might even be noticed with the light color scheme.

The shadow's behavior changes depending on hover status, too.

Expected Results:
The shadow gradient should use the backdrop color from the comments margin.

In dark mode, maybe there should be no shadow at all;
otherwise you'll need a darker shadow.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 Jeff Fortin Tam 2024-02-02 22:40:43 UTC
Created attachment 192361 [details]
Annotated screenshot at 2x scale
Comment 2 steve 2024-02-03 11:27:05 UTC
Confirmed in main build -> New
Not great UI. Easiest fix is probably to remove the shadow. Even in light mode it does not look great.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3d5c0a94539d2196c7d0dd9f52660ba9e58d31b8
CPU threads: 8; OS: macOS 13.6.4; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 3 Heiko Tietze 2024-02-05 13:16:41 UTC
(In reply to steve from comment #2)
> Easiest fix is probably to remove the shadow.
+1 (if we keep shadow, in general, it should be blurry)

Could imagine this to be an easyhack. Is it, Hossein?
Comment 4 Heiko Tietze 2024-02-21 15:13:38 UTC
The shadow makes sense as indicator for hover and activation. Fixed the wrong, hard-coded gradient by using the actual background (application color > writer > section) and either black or white depending on luminescence. Looks good for the default but not really shadow-like for darker backgrounds. Anyway, the issue should be fixed.
Comment 5 Commit Notification 2024-02-21 19:03:26 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/215a7afd6042c35a45509cea3eae69254d676429

Resolves tdf#159535 - Less obtrusive shadow for comments

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 steve 2024-02-22 10:26:53 UTC
Created attachment 192710 [details]
2024-02-22 verified
Comment 7 steve 2024-02-22 10:27:28 UTC
Thanks Heiko - verified in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8eee7eab8087590aa19bb9989c294e9be767f356
CPU threads: 8; OS: macOS 13.6.4; UI render: default; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded