Resolves tdf#159535 - Less obtrusive shadow for comments

Change-Id: Ic4b55ebb52aaf03738184dcc0d3b8d57c9ee57a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163699
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>